--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,21 +64,18 @@ for (let i = 0; i < sortedPosts.length; i++) {
 
 <style>
   h1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
     cursor: default;
-    display: inline;
-    font-style: italic;
   }
 
   .name,
   .desc {
     margin: 0;
-    position: relative;
     top: -1rem;
+    text-align: center;
   }
 
   .desc {
-    font-style: italic;
     margin-bottom: 4rem;
   }
 
@@ -100,7 +97,6 @@ for (let i = 0; i < sortedPosts.length; i++) {
   .view-all {
     color: inherit;
     border-color: rgba(0, 0, 0, 0);
-    opacity: 0.75;
   }
 
   .view-all:hover,
