react-hot-toast post

--- a/src/styles/CodeBlock.module.css
+++ b/src/styles/CodeBlock.module.css
@@ -37,6 +37,10 @@ p code::selection {
   color: var(--primary-color);
 }
 
+h3 code {
+  font-size: inherit;
+}
+
 @media (min-width: 40rem) {
   pre {
     padding: 2rem;
