--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection } from "astro:content";
-
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import styles from '../../styles/CodeBlock.module.css'
+import { slugify, formatDate } from "../../js/utils"
 
 export async function getStaticPaths() {
   const allPosts = await getCollection("posts")
@@ -21,9 +21,9 @@ const {Content} = await post.render()
 
 <BaseLayout style={styles} pageTitle={post.data.title}>
   <div>
-    {post.image ? <img src={post.image.src} alt={post.image.alt} /> : <></> }
+    {post.data.image ? <img src={post.data.image.src} alt={post.data.image.alt} /> : <></> }
     <h1 class={post.image ? '' : 'title'}>{post.data.title}</h1>
-    {post.data.date ? <p class="pub-date">{post.data.date}</p> : <></>}
+    {post.data.date ? <p class="pub-date">{formatDate(post.data.date)}</p> : <></>}
     <hr />
     <div class="content">
       <Content />
