--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -4,6 +4,8 @@ import { getCollection } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import MorePost from "../../components/MorePost.astro";
 
+import { formatBlogPost } from "../../js/utils";
+
 export async function getStaticPaths() {
   const allPosts = await getCollection("posts");
 
@@ -16,13 +18,15 @@ export async function getStaticPaths() {
 }
 
 const allPosts = await getCollection("posts");
+const formattedPosts = formatBlogPost(allPosts);
+
 const { page } = Astro.props;
 ---
 
 <BaseLayout>
   <h1>All Posts</h1>
   {
-    allPosts.map((page) => (
+    formattedPosts.map((page) => (
       <MorePost
         date={page.data.date}
         href={page.slug}
