style tweaks and bug fixes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,7 +39,7 @@ const darkLink = "rgb(26, 30, 43)";
     font-weight: 400;
     color: var(--darkLink);
     border-bottom: 2px solid transparent;
-    padding-top: 1em;
+    margin-top: 1em;
   }
 
   a:hover {
