--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,8 +3,10 @@ import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 import Contact from "../components/Contact.astro";
+import { inject } from "@vercel/analytics";
 
 const { pageTitle } = Astro.props;
+inject();
 ---
 
 <html lang="en">
