--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,16 +9,16 @@
   --size-700: 2.36rem;
   --size-800: 3.15rem;
   --size-900: 4.2rem;
-  --bg-color: rgb(240, 240, 240);
+  --bg-color: #F2F2F7;
   --text-color: rgb(26, 30, 43);
-  --primary-color: dodgerblue;
+  --primary-color: #027AFF;
   --code-bg-color: #0c1117;
 }
 
 .dark body {
-  --bg-color: rgb(26, 30, 43);
+  --bg-color: #1C1C1E;
   --text-color: rgb(245, 245, 240);
-  --primary-color: dodgerblue;
+  --primary-color: #33D74C;
   --code-bg-color: white;
 }
 
@@ -55,6 +55,11 @@ a {
   background-size: auto 4px;
 }
 
+.dark [href]:hover {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%2333D74C' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+}
+
+/* Home logo */
 .wavy-exempt {
   background-image: none !important;
   border-bottom: none;
