--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,7 +1,13 @@
 ---
+const greenLink = '#33D74C';
+const blueLink = '#027AFF';
 ---
 
-<div id="themeToggle" tabindex="0" aria-label="Toggle light and dark mode">
+<div
+  id="themeToggle"
+  tabindex="0"
+  aria-label="Toggle light and dark mode"
+>
   <svg
     xmlns="http://www.w3.org/2000/svg"
     class="icon icon-tabler icon-tabler-sun sun"
@@ -39,7 +45,7 @@
   </svg>
 </div>
 
-<style>
+<style define:vars={{ blueLink, greenLink }}>
   #themeToggle {
     cursor: pointer;
   }
@@ -61,7 +67,7 @@
     transition: 0.2s;
   }
   .moon:hover {
-    opacity: 0.7;
+    stroke: var(--greenLink);
     transform: scale(1.02);
   }
   .sun {
@@ -71,7 +77,7 @@
     transition: 0.2s;
   }
   .sun:hover {
-    opacity: 0.7;
+    stroke: var(--blueLink);
     transform: scale(1.02);
   }
 
@@ -86,37 +92,42 @@
 
 <script>
   const theme = (() => {
-    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
-      return localStorage.getItem("theme");
+    if (
+      typeof localStorage !== 'undefined' &&
+      localStorage.getItem('theme')
+    ) {
+      return localStorage.getItem('theme');
     }
-    if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-      return "dark";
+    if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      return 'dark';
     }
-    return "light";
+    return 'light';
   })();
 
-  if (theme === "light") {
-    document.documentElement.classList.remove("dark");
+  if (theme === 'light') {
+    document.documentElement.classList.remove('dark');
   } else {
-    document.documentElement.classList.add("dark");
+    document.documentElement.classList.add('dark');
   }
 
-  window.localStorage.setItem("theme", theme);
+  window.localStorage.setItem('theme', theme);
 
   const handleToggleClick = () => {
     const element = document.documentElement;
-    element.classList.toggle("dark");
+    element.classList.toggle('dark');
 
-    const isDark = element.classList.contains("dark");
-    localStorage.setItem("theme", isDark ? "dark" : "light");
+    const isDark = element.classList.contains('dark');
+    localStorage.setItem('theme', isDark ? 'dark' : 'light');
   };
 
   document
-    .getElementById("themeToggle")
-    .addEventListener("click", handleToggleClick);
-  document.getElementById("themeToggle").addEventListener("keydown", (e) => {
-    if (e.key === "Enter") {
-      handleToggleClick();
-    }
-  });
+    .getElementById('themeToggle')
+    .addEventListener('click', handleToggleClick);
+  document
+    .getElementById('themeToggle')
+    .addEventListener('keydown', (e) => {
+      if (e.key === 'Enter') {
+        handleToggleClick();
+      }
+    });
 </script>
