switch heading font to unbounded

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,7 +7,7 @@ const darkGlow = 'rgb(0, 84, 255)';
 <a href={`/posts/${href}/`}>
   <div class="card">
     <img src={src} alt={alt} />
-    <p class="title">
+    <h3 class="title">
       {title}
       <svg
         class="arrow"
@@ -23,7 +23,7 @@ const darkGlow = 'rgb(0, 84, 255)';
         ><line x1="5" y1="12" x2="19" y2="12"></line><polyline
           points="12 5 19 12 12 19"></polyline>
       </svg>
-    </p>
+    </h3>
     <p>{desc}</p>
   </div>
 </a>
