--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200;300;400;500;600;700;800;900&display=swap');
 
 /* Based on modularscale.com */
 :root {
@@ -84,6 +85,7 @@ h3,
 h4 {
   line-height: 1.25;
   transition: 0.2s;
+  font-family: 'Unbounded', 'Inter', sans-serif
 }
 
 h1 {
