--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,6 +99,7 @@ const featuredPosts = [feature1, feature2, feature3];
   .more {
     text-align: left;
     margin-top: 4rem;
+    font-size: 1.625rem;
   }
 
   marquee {
@@ -129,12 +130,12 @@ const featuredPosts = [feature1, feature2, feature3];
       font-size: 5.5rem;
     }
 
-    h2 {
-      font-size: 3rem;
-    }
-
     .desc {
       font-size: 1.5rem;
+    }
+
+    .more {
+      font-size: 2.5rem;
     }
   }
 </style>
