change blue, tech comp renders children

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,7 @@
 import ThemeIcon from '../components/ThemeIcon.astro';
 
 const greenLink = '#33D74C';
-const blueLink = '#027AFF';
+const blueLink = '#0000FF';
 ---
 
 <nav>
