--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,7 +1,7 @@
 ---
 const { title, desc, href, alt, src } = Astro.props;
 const lightGlow = 'rgb(227, 227, 227)';
-const darkGlow = 'rgb(0, 84, 255)';
+const darkGlow = '#0000FF';
 ---
 
 <a href={`/posts/${href}/`}>
