--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -1,14 +1,14 @@
 ---
-import { formatDate } from "../js/utils";
+import { formatDate } from '../js/utils';
 
-const lightGlow = "rgb(227, 227, 227)";
-const darkGlow = "rgb(0, 84, 255)";
-const darkBg = "rgb(41, 44, 57)";
-const lightBg = "rgb(250, 250, 250)";
+const lightGlow = 'rgb(227, 227, 227)';
+const darkGlow = '#0000FF';
+const darkBg = 'rgb(41, 44, 57)';
+const lightBg = 'rgb(250, 250, 250)';
 const { date, href, title, last } = Astro.props;
 ---
 
-<div class={`${last ? "last" : ""} container`}>
+<div class={`${last ? 'last' : ''} container`}>
   <a href={`/posts/${href}`}>
     <div class="post">
       <div class="title">
