fix border radius issue on safari

--- a/src/components/Technologies.astro
+++ b/src/components/Technologies.astro
@@ -22,7 +22,7 @@ const { emoji, string, type } = Astro.props;
   .tech {
     background: #151e36;
     color: #bedbfe;
-    outline: 1px solid #bedbfe;
+    border: 1px solid #bedbfe;
   }
 
   .emoji {
