adding aria to icons on home page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,9 @@ const featuredPosts = [feature1, feature2, feature3];
         fill="none"
         stroke-linecap="round"
         stroke-linejoin="round"
+        aria-describedby="github"
       >
+        <title id="github">Github</title>
         <a href="https://github.com/boogerbuttcheeks">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path
@@ -53,7 +55,9 @@ const featuredPosts = [feature1, feature2, feature3];
         fill="none"
         stroke-linecap="round"
         stroke-linejoin="round"
+        aria-describedby="linkedin"
       >
+        <title id="linkedin">LinkedIn</title>
         <a href="https://www.linkedin.com/in/trevortylerlee/">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path
@@ -75,7 +79,9 @@ const featuredPosts = [feature1, feature2, feature3];
         fill="none"
         stroke-linecap="round"
         stroke-linejoin="round"
+        aria-describedby="resume"
       >
+        <title id="resume">Resume</title>
         <a href="https://read.cv/booger">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
