adjust morepost comp bg color in dark mode

--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -3,7 +3,7 @@ import { formatDate } from '../js/utils';
 
 const lightGlow = 'rgb(227, 227, 227)';
 const darkGlow = '#0000FF';
-const darkBg = 'rgb(41, 44, 57)';
+const darkBg = '#2f2f33';
 const lightBg = 'rgb(250, 250, 250)';
 const { date, href, title, last } = Astro.props;
 ---
