update dependencies and remove vercel analytics

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,12 +1,10 @@
 ---
-import "../styles/global.css";
-import Navigation from "../components/Navigation.astro";
-import Footer from "../components/Footer.astro";
-import Contact from "../components/Contact.astro";
-import { inject } from "@vercel/analytics";
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+import Contact from '../components/Contact.astro';
 
 const { pageTitle } = Astro.props;
-inject();
 ---
 
 <html lang="en">
