--- a/src/components/VerticalVideo.astro
+++ b/src/components/VerticalVideo.astro
@@ -1,10 +1,10 @@
 ---
-// const { date, href, title, last } = Astro.props;
+const { src, type } = Astro.props;
 ---
 
 <div class="videoWrapper">
   <video width="320" loop autoplay controls>
-    <source src="/snap.mp4" type="video/mp4" />
+    <source src={src} type={`video/${type}`} />
     Your browser does not support the video tag.
   </video>
 </div>
