--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -31,6 +31,7 @@ const { page } = Astro.props;
         date={page.data.date}
         href={page.slug}
         title={page.data.title}
+        description={page.data.description}
       />
     ))
   }
