change dark mode glow to green

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,6 +1,6 @@
 ---
 const { title, desc, href, alt, src } = Astro.props;
-const lightGlow = 'rgb(227, 227, 227)';
+const lightGlow = '#33D74C';
 const darkGlow = '#0000FF';
 ---
 
