--- a/src/components/MorePost.astro
+++ b/src/components/MorePost.astro
@@ -1,7 +1,7 @@
 ---
 import { formatDate } from '../js/utils';
 
-const lightGlow = 'rgb(227, 227, 227)';
+const lightGlow = '#33D74C';
 const darkGlow = '#0000FF';
 const darkBg = '#2f2f33';
 const lightBg = 'rgb(250, 250, 250)';
