add rss functionality

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,7 @@ const blueLink = '#0000FF';
         >LinkedIn</a
       >
       <a href="https://read.cv/booger">Resume</a>
+      <a href="/rss.xml">RSS</a>
     </span>
     <!-- The sprites are from pokedb.net!  -->
     <span class="pokemon">
