fix mobile footer pokemon

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -67,6 +67,7 @@ const blueLink = '#0000FF';
     align-items: baseline;
     gap: 0.5rem;
     margin-top: 0.5rem;
+    justify-content: space-evenly;
   }
 
   .pokemon img {
