--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -18,6 +18,10 @@ const blueLink = '#0000FF';
     cursor: pointer;
   }
 
+  button {
+    padding: 0 !important;
+  }
+
   [astro-icon="lucide:moon"] {
     display: none;
     transition: 0.2s;
