add descriptive titles for icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const featuredPosts = [feature1, feature2, feature3];
         stroke-linejoin="round"
         aria-describedby="github"
       >
-        <title id="github">Github</title>
+        <title id="github">Link to Trevor's Github</title>
         <a href="https://github.com/boogerbuttcheeks">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path
@@ -57,7 +57,7 @@ const featuredPosts = [feature1, feature2, feature3];
         stroke-linejoin="round"
         aria-describedby="linkedin"
       >
-        <title id="linkedin">LinkedIn</title>
+        <title id="linkedin">Link to Trevor's LinkedIn</title>
         <a href="https://www.linkedin.com/in/trevortylerlee/">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path
@@ -81,7 +81,7 @@ const featuredPosts = [feature1, feature2, feature3];
         stroke-linejoin="round"
         aria-describedby="resume"
       >
-        <title id="resume">Resume</title>
+        <title id="resume">Link to Trevor's online resume</title>
         <a href="https://read.cv/booger">
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
           <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
